Setup init (nog geen changes van Pieter)

--- a/VeggieSwapServer/VeggieSwapServer.csproj
+++ b/VeggieSwapServer/VeggieSwapServer.csproj
@@ -5,11 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VeggieSwapServer.Business\VeggieSwapServer.Business.csproj" />
+    <ProjectReference Include="..\VeggieSwapServer.Data\VeggieSwapServer.Data.csproj" />
   </ItemGroup>
 
 </Project>
