--- a/VeggieSwapServer/appsettings.json
+++ b/VeggieSwapServer/appsettings.json
@@ -1,10 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.\\SQLEXPRESS; Database=VeggieSwapDB; Trusted_Connection=true;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
